2007-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el: Ensure that update-changelog issues an error when used with
	a backend that does not implement it.
	(vc-update-changelog-rcs2log): Rename from vc-default-update-changelog.
	Remove `backend' argument.  Use expand-file-name.
	(vc-cvs-update-changelog, vc-rcs-update-changelog): New aliases.

	* progmodes/python.el (python-end-of-block): Revert last change.
	(python-end-of-statement): Make sure we move *forward*.

2007-05-08  David Reitter  <david.reitter@gmail.com>

	* progmodes/python.el (python-guess-indent): Check non-nullness
	before comparing indent against the 2..8 interval.

2007-05-07  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-ts-unicode-for-key-event): Check if text is
	available.

2007-05-06  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/eldoc.el (turn-on-eldoc-mode): Doc fix.

2007-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff.el (diff): Use buffer-local vars diff-old-file and diff-new-file
	rather than storing their value in the revert-buffer function.

2007-05-04  Nick Roberts  <nickrob@snap.net.nz>

	* t-mouse.el (t-mouse-mode): Do nothing on a graphical display
	when disabling t-mouse-mode.

2007-05-01  Davis Herring  <herring@lanl.gov>

	* calendar/timeclock.el: Update version number.
	(timeclock-modeline-display): Mention timeclock-use-display-time
	in explanatory message.
	(timeclock-in): Fix non-interactive workday specifications.
	(timeclock-log): Don't kill the log buffer if it already existed.
	Suppress warnings when finding the log.  Don't check for a nil
	project twice.  Run hooks after killing the buffer (if applicable).
	(timeclock-geometric-mean): Rename to `timeclock-mean' (it never
	was geometric).  All uses changed.
	(timeclock-generate-report): Support prefix argument.

2007-05-03  Ryan Yeske  <rcyeske@gmail.com>

	* net/rcirc.el (rcirc-timeout-seconds): Increase to prevent unwanted
	disconnections.
